thule-microservice-deployment/src/main/k8s/apply/dashboard-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: dashboard
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  namespace: kube-system
spec:
  rules:
    - host: piglet.serin-consultancy.co.uk
      http:
        paths:
          - path: /dashboard(/|$)(.*)
            backend:
              serviceName: kubernetes-dashboard
              servicePort: 443
---
